--- a/src/userdash.css
+++ b/src/userdash.css
@@ -33,10 +33,7 @@ main.userDashMain {
 	justify-content: flex-end;
 }
 
-.userDashContentHeader i {
-	background-color: #bbb;
-	border-radius: 50%;
-	padding: 7px;
-	/* display: inline-block; */
-	transform: scale(1.5);
+.userDashTeamList {
+	display: flex;
+	flex-wrap: wrap;
 }
