--- a/src/components/team/teamTest.css
+++ b/src/components/team/teamTest.css
@@ -1,6 +1,6 @@
 .image-container {
-  width: 80px;
-  height: 80px;
+  width: 64px;
+  height: 64px;
   margin: auto;
 }
 
@@ -10,5 +10,20 @@
 
 .member-card p {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+.member-card .ant-card-body {
+  padding: 0;
+}
+
+/* Button */
+
+.add-member {
+  width: 64px;
+  height: 64px;
+}
+
+.add-member .anticon {
+  font-size: 30px;
 }
