--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 @import "./scss/variables.scss";
+@import "./scss/mixins.scss";
 @import "./scss/global.scss";
 
 // pages
+
+@import "./scss/register.scss";
 
 // components
