--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -41,13 +41,18 @@
 }
 
 .ant-form {
-	.register-form-button {
+	margin-bottom: 60px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	.register-form-button, .login-form-button {
 		@include button($red);
 		width: 144px;
 		margin-top: 20px;
 	}
 	.ant-form-item {
 		margin-bottom: 0;
+		width: 268px;
 	}
 	.ant-form-item-label {
 		display: flex;
@@ -55,5 +60,4 @@
 	.ant-form-item-label > label::after {
 		content: '';
 	}
-	margin-bottom: 60px;
 }
