--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -1,6 +1,6 @@
 #root {
 	.app {
-		.ant-row {
+		.ant-row.auth-page {
 			background-color: $pale-yellow;
 			.ant-col.auth-main {
 				height: 100vh;
@@ -36,28 +36,27 @@
 			a {
 				color: $dark-blue;
 			}
+			.ant-form {
+				margin-bottom: 60px;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				.register-form-button, .login-form-button {
+					@include button($red);
+					width: 144px;
+					margin-top: 20px;
+				}
+				.ant-form-item {
+					margin-bottom: 0;
+					width: 268px;
+				}
+				.ant-form-item-label {
+					display: flex;
+				}
+				.ant-form-item-label > label::after {
+					content: '';
+				}
+			}
 		}
-	}
-}
-
-.ant-form {
-	margin-bottom: 60px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	.register-form-button, .login-form-button {
-		@include button($red);
-		width: 144px;
-		margin-top: 20px;
-	}
-	.ant-form-item {
-		margin-bottom: 0;
-		width: 268px;
-	}
-	.ant-form-item-label {
-		display: flex;
-	}
-	.ant-form-item-label > label::after {
-		content: '';
 	}
 }
