--- a/src/scss/user-dashboard.scss
+++ b/src/scss/user-dashboard.scss
@@ -6,6 +6,56 @@
 		line-height: 45px;
 		color: $dark-grey;
 		text-align: left;
-		margin: 20px 40px;
+		margin: 20px 50px;
+	}
+	h3 {
+		text-align: left;
+		margin-left: 50px;
+		color: $dark-grey;
+	}
+}
+
+.userDashList {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	margin: 40px;
+}
+
+.add-team {
+	margin: 10px;
+	button {
+		background-color: white;
+		border: 2px dashed $alpaca-green;
+		width: 50px;
+		height: 50px;
+		&:hover {
+			background-color: $alpaca-green;
+			border: 2px dashed white;
+			i {
+				color: white;
+			}
+		}
+		i {
+			color: $alpaca-green;
+		}
+	}
+	p {
+		color: $medium-grey;
+		font-size: 13px;
+		margin-top: 20px;
+	}
+}
+
+.teamCard, .add-team {
+	width: 167px;
+	height: 200px;
+}
+
+.teamCard {
+	.ant-card-body {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
 	}
 }
