--- a/src/scss/user-dashboard.scss
+++ b/src/scss/user-dashboard.scss
@@ -1,4 +1,5 @@
 .user-dashboard {
+	margin: 30px;
 	h1 {
 		font-style: normal;
 		font-weight: bold;
@@ -6,11 +7,11 @@
 		line-height: 45px;
 		color: $dark-grey;
 		text-align: left;
-		margin: 20px 50px;
+		margin: 20px 40px;
 	}
 	h3 {
 		text-align: left;
-		margin-left: 50px;
+		margin-left: 40px;
 		color: $dark-grey;
 	}
 }
@@ -19,7 +20,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
-	margin: 40px;
+	margin: 20px 30px;
 }
 
 .add-team {
@@ -50,6 +51,8 @@
 .teamCard, .add-team {
 	width: 167px;
 	height: 200px;
+	box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
+	border-radius: 4px;
 }
 
 .teamCard {
@@ -57,5 +60,39 @@
 		display: flex;
 		flex-direction: column;
 		align-items: flex-end;
+	}
+}
+
+.videoCard {
+	width: 167px;
+	height: 176px;
+	margin: 10px;
+	box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.08);
+	border-radius: 0px 0px 4px 4px;
+	.ant-card-body {
+		padding: 0;
+	}
+	.videoTitle {
+		font-weight: 600;
+		font-size: 15px;
+		line-height: 19px;
+		color: $dark-grey;
+	}
+	.videoDate {
+		font-size: 13px;
+		line-height: 16px;
+		color: $medium-grey
+	}
+	.videoDescription {
+		font-size: 13px;
+		line-height: 16px;
+		color: $dark-grey;
+	}
+	.videoThumb {
+		height: 80px;
+		background-color: black;
+		img {
+			height: 80px;
+		}
 	}
 }
