--- a/src/scss/video-card.scss
+++ b/src/scss/video-card.scss
@@ -1,19 +1,34 @@
 .video-card {
-	width: 250px;
-	height: 350px;
+	width: 160px;
+	height: 250px;
 	cursor: pointer;
 	margin: 0 0 25px;
 	overflow: hidden;
+	.ant-card-cover {
+	}
 	.ant-card-body {
-		height: 100%;
 		overflow: hidden;
 		padding: 10px;
 		margin: 0 !important;
 	}
-	.ant-card-meta-title {
-		font-size: 1rem;
-	}
-	.ant-card-meta-description {
-		font-size: .75rem;
+	.ant-card-meta-detail {
+		.ant-card-meta-title {
+			font-size: 1rem;
+			margin: 0;
+		}
+		.ant-card-meta-description {
+			font-size: 0.75rem;
+			:after {
+				content: "";
+				text-align: right;
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				width: 100%;
+				
+				height: 3rem;
+				background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, .7) 99%);
+			}
+		}
 	}
 }
