--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,4 +7,7 @@ $white: #ffffff;
 $medium-grey: #728096;
 $dark-blue: #021BFF;
 $dark-grey: #323A45;
-$black: #000000
+$black: #000000;
+
+/*===== SIZES =====*/
+$card-width: 160px;
