added complitary styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 @import "./scss/auth.scss";
 @import "./scss/nav-header.scss";
 @import "./scss/user-dashboard.scss";
+@import "./scss/user-profile.scss";
 
 // components
 
