--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,10 +1,14 @@
 /*===== COLORS =====*/
 $alpaca-green: #93D800;
-$pale-yellow: #FBFFDF;
-$red: #FF0000;
-$dark-grey: #323A45;
-$white: #ffffff;
-$medium-grey: #728096;
-$dark-blue: #021BFF;
-$dark-grey: #323A45;
-$black: #000000
+$pale-yellow : #FBFFDF;
+$red         : #FF0000;
+$dark-grey   : #323A45;
+$white       : #ffffff;
+$medium-grey : #728096;
+$dark-blue   : #021BFF;
+$dark-grey   : #323A45;
+$black       : #000000;
+
+/*===== FONT SIZES =====*/
+$lg-heading-font-size: 36px;
+$sm-text-size        : 15px;
