--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,4 @@
 @import "./scss/video-card.scss";
 @import "./scss/prompt-list.scss";
 @import "./scss/prompt-card.scss";
+@import "./scss/member-list.scss";
