--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,4 +11,5 @@ $black       : #000000;
 
 /*===== FONT SIZES =====*/
 $lg-heading-font-size: 36px;
-$sm-text-size        : 15px;
+$sm-text-size        : 14px;
+$md-text-size        : 25px;
