--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -1,6 +1,25 @@
 .jumbotron {
 	height          : 185px;
 	background-color: $pale-yellow;
+	text-align      : right;
+
+	.breadcrumb {
+		font-size      : $md-text-size;
+		display        : flex;
+		align-items    : center;
+		justify-content: flex-end;
+		padding-top    : 20px;
+
+		&:hover {
+			cursor: pointer;
+		}
+
+		.anticon {
+			font-size   : 17px;
+			margin-right: 10px;
+			font-weight : bold;
+		}
+	}
 }
 
 .profile-main {
@@ -14,5 +33,38 @@
 	.full-btn {
 		@include button($alpaca-green);
 		color: $black;
+	}
+}
+
+.profile-information {
+	padding: 20px 0;
+}
+
+.profile-information h1 {
+	text-align: left;
+}
+
+.form-container {
+	margin-top: 40px;
+}
+
+/* Avatar section */
+
+.avatar-img {
+	margin-bottom: 10px;
+
+	img {
+		border-radius: 50%;
+		border       : 3px solid #fff;
+	}
+}
+
+.avatar-wrapper {
+	text-align: center;
+	position  : absolute;
+	top       : -75px;
+
+	a {
+		font-size: $sm-text-size;
 	}
 }
