--- a/src/components/team/teamTest.css
+++ b/src/components/team/teamTest.css
@@ -8,7 +8,7 @@
   border-radius: 50%;
 }
 
-.member-card p {
+/* .member-card p {
   text-align: center;
   margin-top: 10px;
 }
@@ -16,7 +16,7 @@
 .member-card .ant-card-body {
   padding: 0;
 }
-
+ */
 /* Button */
 
 .add-member {
