--- a/src/scss/member-list.scss
+++ b/src/scss/member-list.scss
@@ -1,4 +1,13 @@
 .member-card {
-	width: $card-width * .6;
-	margin: 5px;
+	width: $card-width * 0.6;
+	margin: .3rem .3rem 1rem .3rem;
+
+	p {
+		text-align: center;
+		// margin-bottom: 10px;
+	}
+	.ant-card-body {
+		padding: 0;
+	}
 }
+
