--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,6 @@
 /*===== COLORS =====*/
 $alpaca-green: #93D800;
+$alpaca-blue : #001529;
 $pale-yellow : #FBFFDF;
 $red         : #FF0000;
 $dark-grey   : #323A45;
