--- a/src/scss/nav-header.scss
+++ b/src/scss/nav-header.scss
@@ -10,11 +10,8 @@
 		display: flex;
 		align-items: center;
 	}
-	.ant-layout-sider {
-		flex: 0 0 240px !important;
-    max-width: 240px !important;
-    min-width: 240px !important;
-		width: 240px !important;
+	.ant-layout-sider-zero-width-trigger {
+		top: 20px;
 	}
 	.userDashHeader {
 		height: 83px;
