--- a/src/scss/team-card.scss
+++ b/src/scss/team-card.scss
@@ -1,10 +1,21 @@
 .team-cards {
 	display: flex;
 	justify-content: flex-start;
+	flex-wrap: wrap;
+	@media( max-width: 600px ) {
+		margin: 10%;
+		flex-wrap: nowrap;
+		overflow-x: auto;
+		width:fit-content;
+	}
+	// @media( max-width: 800px ) {
+  //   margin: 5%;
+  // }
 }
 
 .add-team {
 	margin: 10px;
+	min-width: 160px;
 	button {
 		background-color: white;
 		border: 2px dashed $alpaca-green;
@@ -41,4 +52,8 @@
 		flex-direction: column;
 		align-items: flex-end;
 	}
+}
+
+.team-cards::-webkit-scrollbar {
+	display: none;
 }
