--- a/src/scss/video-card.scss
+++ b/src/scss/video-card.scss
@@ -5,6 +5,8 @@
 	cursor: pointer;
 	margin: 0 0 25px;
 	overflow: hidden;
+	box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 	.ant-card-cover {
 		height: 127px;
     display: flex;
