--- a/src/scss/video-card.scss
+++ b/src/scss/video-card.scss
@@ -3,17 +3,17 @@
 	width: $card-width;
 	height: 250px;
 	cursor: pointer;
-	margin: 0 0 25px;
+	margin: 0 $card-spacing $card-row-spacing;
 	overflow: hidden;
 	box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
+	border-radius: 4px;
 	.ant-card-cover {
 		height: 127px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: black;
-	}	
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: black;
+	}
 	.ant-card-body {
 		overflow: hidden;
 		padding: 10px;
@@ -33,9 +33,9 @@
 				bottom: 0;
 				right: 0;
 				width: 100%;
-				
+
 				height: 3rem;
-				background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, .7) 99%);
+				background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.7) 99%);
 			}
 		}
 	}
