--- a/src/scss/carousel.scss
+++ b/src/scss/carousel.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	position: relative;
+	min-height: 220px;
 	.carouselItems {
 		display: flex;
 		flex-grow: 1;
