--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -1,107 +1,94 @@
-#root {
-	.app {
-		.ant-row.auth-page {
-			background-color: $pale-yellow;
+.ant-row.auth-page {
+	width: 100%;
+	@media( max-width: 900px ) {
+		display: flex;
+		flex-direction: column;
+	}
+	.ant-col.auth-main {
+		height: 100vh;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-direction: column;
+		@media( max-width: 600px ) {
+			justify-content: flex-start;
+		}
+		span {
+			padding: 20px 40px;
+			align-self: flex-end;
+			font-size: 14px;
 			@media( max-width: 900px ) {
-				display: flex;
-				flex-direction: column;
-				height: 100vh;
+				padding: 0 0 15px 0;
+				align-self: center;
+				order: 3;
 			}
-			.ant-col.auth-main {
-				height: 100vh;
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
-				flex-direction: column;
-				@media( max-width: 600px ) {
-					justify-content: flex-start;
-				}
-				span {
-					padding: 20px 40px;
-					align-self: flex-end;
-					font-size: 14px;
-					@media( max-width: 900px ) {
-						padding: 0 0 15px 0;
-						align-self: center;
-						order: 3;
-					}
-				}
-				.auth-content {
-					height: 100%;
-					display: flex;
-					flex-direction: column;
-					justify-content: center;
-					p {
-						font-size: 16px;
-						margin-bottom: 20px;
-					}
-					span {
-						padding: 0;
-						justify-content: center;
-					}
-					h1 {
-						font-size: 30px;
-						font-weight: normal;
-						@media( max-width: 600px) {
-							margin-bottom: 10px;
-						}
-					}
-				}
+		}
+		.auth-content {
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			p {
+				font-size: 16px;
+				margin-bottom: 20px;
 			}
-			.auth-sider {
-				background-color: $alpaca-green;
-				height: 100vh;
-				display: flex;
+			span {
+				padding: 0;
 				justify-content: center;
-				align-items: center;
-				padding: 20px;
-				min-width: 300px;
-				img {
-					max-width: 100%;
-					max-height: 100%;
-				}
-				@media( max-width: 900px ) {
-					justify-content: flex-start;
-					padding: 10px;
-					width: 100%;
-					height: auto;
-					img {
-						max-width: 10%;
-					}
-				}
-				@media( max-width: 600px ) {
-					img {
-						max-width: 15%;
-					}
-				}
 			}
-			a {
-				color: $dark-blue;
+			h1 {
+				font-size: 30px;
+				font-weight: normal;
 			}
-			.ant-form {
-				margin-bottom: 60px;
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				@media( max-width: 900px ) {
-					margin-bottom: 0;
-				}
-				.register-form-button, .login-form-button {
-					@include button($red);
-					width: 144px;
-					margin-top: 20px;
-				}
-				.ant-form-item {
-					margin-bottom: 0;
-					width: 268px;
-				}
-				.ant-form-item-label {
-					display: flex;
-				}
-				.ant-form-item-label > label::after {
-					content: '';
-				}
+		}
+	}
+	.auth-sider {
+		background-color: $alpaca-green;
+		height: 100vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 20px;
+		min-width: 300px;
+		img {
+			max-width: 100%;
+			max-height: 100%;
+		}
+		@media( max-width: 900px ) {
+			justify-content: flex-start;
+			padding: 10px;
+			width: 100%;
+			height: auto;
+			img {
+				max-width: 80px;
 			}
+		}
+	}
+	a {
+		color: $dark-blue;
+	}
+	.ant-form {
+		margin-bottom: 60px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		@media( max-width: 900px ) {
+			margin-bottom: 0;
+		}
+		.register-form-button, .login-form-button {
+			@include button($red);
+			width: 144px;
+			margin-top: 20px;
+		}
+		.ant-form-item {
+			margin-bottom: 0;
+			width: 268px;
+		}
+		.ant-form-item-label {
+			display: flex;
+		}
+		.ant-form-item-label > label::after {
+			content: '';
 		}
 	}
 }
