--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -14,8 +14,16 @@ code {
 }
 
 .app {
-	height    : 100vh;
+	display: flex;
+	width: 100%;
 	text-align: center;
+	background-color: $pale-yellow;
+}
+
+#root {
+	display: flex;
+	height: 100%;
+	background-color: $pale-yellow;
 }
 
 .small {
