--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -5,6 +5,7 @@
 		flex-direction: column;
 	}
 	.ant-col.auth-main {
+		height: 100%;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
