Small responsiveness fix.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -15,9 +15,11 @@ code {
 
 .app {
 	display: flex;
+	height: 100%;
 	width: 100%;
 	text-align: center;
 	background-color: $pale-yellow;
+	min-height: 500px;
 }
 
 #root {
