--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -6,6 +6,7 @@
 	}
 	.ant-col.auth-main {
 		display: flex;
+		height: 100%;
 		justify-content: space-between;
 		align-items: center;
 		flex-direction: column;
