--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -54,13 +54,32 @@
 			max-width: 100%;
 			max-height: 100%;
 		}
+		.alpaca-logo-no-text, p {
+			display: none;
+		}
 		@media( max-width: 900px ) {
 			justify-content: flex-start;
 			padding: 10px;
 			width: 100%;
 			height: auto;
+			align-items: center;
 			img {
 				max-width: 80px;
+			}
+			.alpaca-logo {
+				display: none;
+			}
+			.alpaca-logo-no-text, p {
+				display: flex;
+				align-items: center;
+			}
+			p {
+				color: white;
+				font-family: Pacifico;
+				font-style: normal;
+				font-weight: normal;
+				font-size: 36px;
+				margin: 0 0 0 15px;;
 			}
 		}
 	}
