--- a/src/scss/member-list.scss
+++ b/src/scss/member-list.scss
@@ -1,6 +1,7 @@
 .member-card {
 	width: $card-width * 0.6;
 	margin: .3rem .3rem 1rem .3rem;
+	background-color: transparent;
 
 	p {
 		text-align: center;
@@ -8,6 +9,14 @@
 	}
 	.ant-card-body {
 		padding: 0;
+		.edit-card {
+			background-color: transparent;
+			border: none;
+			.ant-card-grid {
+				box-shadow: none;
+				-webkit-box-shadow: none;
+			}
+		}
 	}
 }
 
