--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -47,5 +47,5 @@ h1 {
 .card-flex {
 	display        : flex;
 	flex-wrap      : wrap;
-	justify-content: flex-start;
+	justify-content: space-around;
 }
