Completed styling and responsiveness for team dashboard.

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,10 +7,10 @@
 @import "./scss/auth.scss";
 @import "./scss/nav-header.scss";
 @import "./scss/user-dashboard.scss";
+@import "./scss/team-dashboard.scss";
 @import "./scss/user-profile.scss";
 
 // components
-
 
 @import "./scss/carousel.scss";
 @import "./scss/team-card.scss";
