--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -54,7 +54,7 @@ h1 {
 }
 
 .dashboard {
-	margin: 3%;
+	margin: 2% 3%;
 	@media( max-width: 600px ) {
     margin: 10%;
 	}
@@ -68,9 +68,9 @@ h1 {
 		line-height: 45px;
 		color: $dark-grey;
 		text-align: left;
-		margin: 20px 40px;
+		margin: 15px 40px;
 	}
-	h3 {
+	h2 {
 		text-align: left;
 		margin-top: 10px;
 		color: $dark-grey;
@@ -87,5 +87,8 @@ h1 {
 	button {
 		@include button($alpaca-green);
 		min-width: 142px;
+		&:hover {
+			@include button($alpaca-green);
+		}
 	}
 }
