--- a/src/scss/video-card.scss
+++ b/src/scss/video-card.scss
@@ -1,12 +1,26 @@
-.video-card {
+.carouselItems > .add-video-btn, .video-card {
 	min-width: $card-width;
 	width: $card-width;
-	height: 250px;
-	cursor: pointer;
-	margin: 0 $card-spacing $card-row-spacing;
-	overflow: hidden;
+	height: 240px;
+	margin: $card-spacing $card-row-spacing;
 	box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
 	border-radius: 4px;
+}
+
+.add-video-btn {
+	i {
+		font-size: 30px;
+	}
+	&:hover {
+		background-color: #e4e4e4;
+		color: inherit;
+    border-color: rgb(217, 217, 217);
+	}
+}
+
+.video-card {
+	cursor: pointer;
+	overflow: hidden;
 	.ant-card-cover {
 		height: 127px;
 		display: flex;
