--- a/src/scss/team-card.scss
+++ b/src/scss/team-card.scss
@@ -61,11 +61,18 @@
 			width: 100%;
 			.ant-card-meta-detail {
 				.ant-card-meta-title {
+					text-align: center;
+					color: rgba(0, 0, 0, 0.85);
+					font-weight: 500;
+					font-size: 16px;
+			}
+				.ant-card-meta-title {
 					font-size: 1rem;
 					margin: 5px 0;
 				}
 				.ant-card-meta-description {
 					font-size: 0.75rem;
+					height: 75px;
 					:after {
 						content: "";
 						text-align: right;
