Modal styling, some fixes.

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,4 @@
 @import "./scss/prompt-list.scss";
 @import "./scss/prompt-card.scss";
 @import "./scss/member-list.scss";
+@import "./scss/post-video.scss"
