Added timer, more styling and fixes.

--- a/src/scss/video-card.scss
+++ b/src/scss/video-card.scss
@@ -27,6 +27,11 @@
 		color: inherit;
 		border-color: rgb(217, 217, 217);
 	}
+	&:focus, &:active {
+		color: inherit;
+		border-color: rgb(217, 217, 217);
+	}
+
 }
 
 .video-card {
