--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -53,7 +53,7 @@ h1 {
 	justify-content: flex-start;
 }
 
-.dashboard {
+.dashboard, .my-videos {
 	margin: 2% 3%;
 	@media( max-width: 600px ) {
     margin: 10%;
