--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -7,3 +7,9 @@
 @mixin outlined-button($color) {
 	border-color: $color;
 }
+
+@mixin texts() {
+	font-family: "Merriweather", sans-serif;
+	color: $color-3;
+	font-size: 1.6rem;
+}
