--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 @import "./scss/user-dashboard.scss";
 @import "./scss/team-dashboard.scss";
 @import "./scss/user-profile.scss";
+@import "./scss/home.scss";
 
 // components
 
