--- a/src/App.scss
+++ b/src/App.scss
@@ -19,5 +19,4 @@
 @import "./scss/prompt-card.scss";
 @import "./scss/member-list.scss";
 @import "./scss/user-videos.scss";
-@import "./scss/post-video.scss"
-
+@import "./scss/post-video.scss";
