--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,19 +11,54 @@ body {
 	// }
 }
 
-header {
+header.home {
 	position: relative;
 	height: 100vh;
 	width: 100vw;
 
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 
 	background-image: none;
 	overflow: hidden;
 	text-shadow: 0 0 15px rgba(255, 255, 255, 1), 0 0 15px rgba(255, 255, 255, 1);
+
+	div.header {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		
+		z-index: 99;
+		// align-items: left;
+		width: 100vw;
+		// width: 400px;
+		padding: 25px;
+		h2 {
+			color: black;
+		}
+		* {
+			margin: 5%;
+		}
+		div.logo {
+			width: 25%;	
+			img {
+				max-width: 100%;
+			}	
+		}
+
+		div.text {
+			width: 30%;
+			text-align: left;
+			h1 {
+				font-weight: bolder;
+				font-size: 3rem;
+			}
+		}
+		
+	}
 
 	div.cover {
 		position: absolute;
@@ -50,34 +85,6 @@ header {
 			lighten($pale-yellow, 20%)
 		);
 	}
-	
-	div.header {
-		// .testblock();
-		z-index: 99;
-		align-items: left;
-		width: 400px;
-		padding: 25px;
-		// .hardborder();
-		h2 {
-			color: black;
-		}
-	}
-
-	// &.about {
-	// 	height: 300px;
-	// 	background-image: linear-gradient(yellow, red);
-	// }
-	// div.about {
-	// 	align-items: left;
-	// 	width: 400px;
-	// 	padding: 25px;
-	// 	h2 {
-	// 		color: $dark-grey;
-	// 	}
-	// }
-	// h2.about {
-	// 	font-size: 3rem;
-	// }
 }
 
 // for the floaty headerbg
