--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -30,60 +30,93 @@ header.home {
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
-		
+
 		z-index: 99;
 		// align-items: left;
 		width: 100vw;
 		// width: 400px;
 		padding: 25px;
-		h2 {
-			color: black;
-		}
 		* {
 			margin: 5%;
 		}
 		div.logo {
-			width: 25%;	
+			width: 25%;
+			min-width: 320px;
 			img {
 				max-width: 100%;
-			}	
+				min-width: 250px;
+			}
 		}
 
 		div.text {
 			width: 30%;
+			min-width: 320px;
 			text-align: left;
 			h1 {
 				font-weight: bolder;
 				font-size: 3rem;
 			}
+			h2 {
+				font-size: 2rem;
+			}
+			@media screen and (max-width: 1200px) {
+				h1 {
+					font-weight: bolder;
+					font-size: 2.5rem;
+				}
+				h2 {
+					font-size: 1.7rem;
+				}
+			}
 		}
-		
+		@media screen and (max-width: 800px) {
+			flex-direction: column;
+			justify-content: space-evenly;
+			// div.text, div.logo {
+			// 	width: 100%;
+			// }
+			div.logo {				
+				padding: 20px;
+				// min-width: 320px;
+				// img {
+				// 	max-width: 100%;
+				// 	min-width: 250px;
+				// }
+			}
+			div.text {
+				text-align: center;
+			}
+			
+			* {
+				margin: 0 auto;
+			}
+			h1 {
+				font-weight: bolder;
+				font-size: 2.5rem;
+			}
+			h2 {
+				font-size: 1.7rem;
+			}
+		}
 	}
 
 	div.cover {
 		position: absolute;
 		height: 900px;
-		width: 5000px;
+		width: 6000px;
 		background-image: url("../imgs/floatbg.jpg");
 		// background-position: center center;
 		// background-size: 50%;
 		animation: move 250s infinite linear;
 		will-change: transform;
-		opacity: .20;
+		opacity: 0.2;
 	}
-	
+
 	div.mainbg {
 		position: absolute;
 		height: 100%;
 		width: 100%;
-		background-image: linear-gradient(
-			desaturate( 
-				darken($pale-yellow, 30%),
-				50%
-			),
-			
-			lighten($pale-yellow, 20%)
-		);
+		background-image: linear-gradient(desaturate(darken($pale-yellow, 30%), 50%), lighten($pale-yellow, 20%));
 	}
 }
 
@@ -98,5 +131,5 @@ header.home {
 	}
 	100% {
 		transform: translateY(0) translateX(1250px);
-	}	
+	}
 }
