--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -40,6 +40,7 @@
 
 .profile-main {
 	background-color: #fff;
+	height          : 100%;
 
 	.outlined-btn {
 		@include outlined-button($alpaca-green);
@@ -63,10 +64,6 @@
 
 .profile-information h1 {
 	text-align: left;
-}
-
-.form-container {
-	margin-top: 40px;
 }
 
 /* Avatar section */
