changed name of carousel to jumbotron to make more sense

--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -44,7 +44,7 @@
 
 .profile-main {
 	background-color: #fff;
-	height          : inherit;
+	height          : 100%;
 
 	.outlined-btn {
 		@include outlined-button($alpaca-green);
