--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -14,17 +14,17 @@ code {
 }
 
 .app {
-	display: flex;
-	height: 100%;
-	width: 100%;
-	text-align: center;
+	display         : flex;
+	height          : 100%;
+	width           : 100%;
+	text-align      : center;
 	background-color: $pale-yellow;
-	min-height: 500px;
+	min-height      : 500px;
 }
 
 #root {
 	background-color: $pale-yellow;
-	height: 100%;
+	height          : 100%;
 }
 
 .small {
@@ -44,6 +44,7 @@ h1 {
 	max-width: 1000px;
 	width    : 100%;
 	margin   : auto;
+	padding  : 0 20px;
 	position : relative;
 }
 
@@ -53,43 +54,51 @@ h1 {
 	justify-content: flex-start;
 }
 
-.dashboard, .my-videos {
+.dashboard,
+.my-videos {
 	margin: 2% 3%;
-	@media( max-width: 600px ) {
-    margin: 10%;
+
+	@media(max-width: 600px) {
+		margin: 10%;
 	}
-	@media( max-width: 800px ) {
-    margin: 5%;
-  }
+
+	@media(max-width: 800px) {
+		margin: 5%;
+	}
+
 	h1 {
-		font-style: normal;
+		font-style : normal;
 		font-weight: bold;
-		font-size: 36px;
+		font-size  : 36px;
 		line-height: 45px;
-		color: $dark-grey;
-		text-align: left;
-		margin: 15px 40px;
+		color      : $dark-grey;
+		text-align : left;
+		margin     : 15px 40px;
 	}
+
 	h2 {
-		text-align: left;
-		margin-top: 10px;
-		color: $dark-grey;
+		text-align : left;
+		margin-top : 10px;
+		color      : $dark-grey;
 		font-weight: 600;
-		font-size: 17px;
+		font-size  : 17px;
 	}
 }
 
 .dashboard-header {
-	display: flex;
-  align-items: center;
+	display        : flex;
+	align-items    : center;
 	justify-content: space-between;
-	padding: 0 40px;
+	padding        : 0 40px;
+
 	button {
 		@include button($alpaca-green);
 		min-width: 142px;
+
 		&:hover {
 			@include button($alpaca-green);
 		}
+
 		&:focus {
 			@include button($alpaca-green);
 		}
