--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -60,6 +60,19 @@
 		color    : $alpaca-blue;
 		font-size: 16px;
 	}
+
+	.ant-col-16 {
+		@media (max-width: 800px) {
+			width     : 100%;
+			margin-top: 130px;
+		}
+	}
+
+	.ant-col-8 {
+		@media (max-width: 800px) {
+			width: 100%;
+		}
+	}
 }
 
 .profile-information {
@@ -88,6 +101,11 @@
 
 	a {
 		font-size: $sm-text-size;
+	}
+
+	@media (max-width: 800px) {
+		left     : 50%;
+		transform: translateX(-50%);
 	}
 }
 
