login link complete.

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -164,11 +164,15 @@ header.home {
 		.links {
 			display: flex;
 			justify-content: space-around;
-			a:link, a:visited {color: $dark-grey; }
-			a:hover {color: $medium-grey; }
 
 			font-size: 1.5rem;
 			font-weight: bolder;
+			
+			p:hover {
+				cursor: pointer;
+			}
+			a, a:link, a:visited {color: $dark-grey; }
+			a:hover {color: $medium-grey; }
 			// margin-right: 20%;
 			* {
 				margin: 0 8%;
