small style fix

--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -38,6 +38,10 @@
 	}
 }
 
+.profile-page.ant-layout-content {
+	min-height: auto;
+}
+
 .profile-main {
 	background-color: #fff;
 	height          : 100%;
