--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -38,20 +38,22 @@ header.home {
 		// width: 400px;
 		padding: 25px;
 		margin-bottom: 150px;
-		* {
+		div {
 			margin: 5%;
 		}
 		div.logo {
 			width: 25%;
 			min-width: 320px;
 			img {
+				padding: 0;
+				margin: 0;
 				max-width: 100%;
 				min-width: 250px;
 			}
 		}
 
 		div.text {
-			width: 30%;
+			width: 25%;
 			min-width: 320px;
 			text-align: left;
 			h1 {
@@ -71,10 +73,10 @@ header.home {
 				}
 			}
 			div.start {
+				margin: 0;
 				button {
 					// padding: 15px;
 					font-size: 1rem;
-					margin: 0;
 					font-weight: bolder;
 					@include button($alpaca-green);
 					border: 1px solid $medium-grey;
@@ -159,11 +161,18 @@ header.home {
 		}
 		.title {
 			@include userDashHeaderFont();
-			// margin-left: 20%;
+			width: 25%;
+			min-width: 320px;
+			text-align: right; 
+			display: flex;
+			justify-content: center;
+
 		}
 		.links {
+			width: 25%;
+			min-width: 320px;
 			display: flex;
-			justify-content: space-around;
+			justify-content: flex-start;
 
 			font-size: 1.5rem;
 			font-weight: bolder;
@@ -174,8 +183,8 @@ header.home {
 			a, a:link, a:visited {color: $dark-grey; }
 			a:hover {color: $medium-grey; }
 			// margin-right: 20%;
-			* {
-				margin: 0 8%;
+			* { 
+				margin: 0 3%;
 			}
 		}
 	}
