--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,9 @@
 /*===== COLORS =====*/
 $alpaca-green: #93D800;
+$alpaca-green-alpha: #93D800;
 $alpaca-blue : #001529;
 $pale-yellow : #FBFFDF;
+$pale-yellow-alpha: rgba(#FBFFDF, 0.3);
 $red         : #FF0000;
 $white       : #ffffff;
 $medium-grey : #728096;
