--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import "./scss/variables.scss";
 @import "./scss/mixins.scss";
 @import "./scss/global.scss";
-
+@import "./scss/utility.scss";
 // pages
 
 @import "./scss/auth.scss";
@@ -22,3 +22,4 @@
 @import "./scss/user-videos.scss";
 @import "./scss/post-video.scss";
 @import "./scss/upload-photo.scss";
+
