General cleanup + move devteam to own page

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -197,7 +197,7 @@ header.home {
 			display: flex;
 			justify-content: center;
 		}
-		.links {
+		.links, .devBtn{
 			width: 25%;
 			min-width: 320px;
 			display: flex;
